Anadido catkin al repo, de tal modo que sea posible compilar los nodos desde él. Se ha optado inicialmente por realizar una union de todos los nodos desarrollados en mismo catkin. Por otro lado, se ha comenzado a desarrollar un nodo en python que se encargaria de leer los encoders del gpio de la rpi y publicar, para robot_localization, un mensaje tipo twistcovariancestamped

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 Hardware/FreeCad/*.fcstd1
 Hardware/FreeCad/rocker-bogie/*.fcstd1
 Hardware/FreeCad/chasis/*.fcstd1
+Software/ROS/catkin_ws/build/
+Software/ROS/catkin_ws/devel/
