--- a/Software/ROS/catkin_ws/src/wheel_encoder/CMakeLists.txt
+++ b/Software/ROS/catkin_ws/src/wheel_encoder/CMakeLists.txt
@@ -143,9 +143,9 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
- add_executable(wheel_encoder    src/wheel_encoder.cpp  )
- add_executable(wheele_odom      src/wheele_odom.cpp    )
- add_executable(control_motors   src/control_motors.cpp )
+ add_executable(wheel_encoder src/wheel_encoder.cpp )
+ add_executable(wheele_odom   src/wheele_odom.cpp   )
+ add_executable(control_motors   src/control_motors.cpp   )
 
 
 ## Rename C++ executable without prefix
@@ -158,7 +158,7 @@ include_directories(
 ## same as for the library above
  add_dependencies(wheel_encoder ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} pigpio )
  add_dependencies(wheele_odom   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
- add_dependencies(control_motors   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}     )
+ add_dependencies(control_motors   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries( wheel_encoder
@@ -166,11 +166,10 @@ include_directories(
 			pigpio
 			encoder
 			Threads::Threads
-			${CMAKE_THREAD_LIBS_INIT} # @IDEA Can be an error.
+			${CMAKE_THREAD_LIBS_INIT} # @TODO Can be an error.
 			)
 
 	target_link_libraries(wheele_odom ${catkin_LIBRARIES} )
-
   target_link_libraries(control_motors ${catkin_LIBRARIES} )
 
 #############
