--- a/Software/ROS/catkin_ws/src/wheele/package.xml
+++ b/Software/ROS/catkin_ws/src/wheele/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
-  <name>wheel_encoder</name>
+  <name>wheele</name>
   <version>0.0.0</version>
-  <description>The wheel_encoder package</description>
+  <description>The wheele miscelaneous package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
@@ -21,7 +21,7 @@
   <!-- Url tags are optional, but multiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/wheel_encoder</url> -->
+  <!-- <url type="website">http://wiki.ros.org/wheele</url> -->
 
 
   <!-- Author tags are optional, multiple are allowed, one per tag -->
