--- a/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
+++ b/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
@@ -14,6 +14,7 @@ find_package(catkin REQUIRED COMPONENTS
   nav_msgs
   geometry_msgs
 	tf
+  message_generation
 )
 
 set(CMAKE_THREAD_PREFER_PTHREAD TRUE)
@@ -58,11 +59,11 @@ find_package(pigpio MODULE REQUIRED)
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
 
 ## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
+ add_message_files(
+   FILES
+   pwm6.msg
 #   Message2.msg
-# )
+ )
 
 ## Generate services in the 'srv' folder
 # add_service_files(
@@ -79,10 +80,10 @@ find_package(pigpio MODULE REQUIRED)
 # )
 
 ## Generate added messages and services with any dependencies listed here
-# generate_messages(
-#   DEPENDENCIES
-#   std_msgs  # Or other packages containing msgs
-# )
+ generate_messages(
+   DEPENDENCIES
+   std_msgs  # Or other packages containing msgs
+ )
 
 ################################################
 ## Declare ROS dynamic reconfigure parameters ##
@@ -116,7 +117,7 @@ find_package(pigpio MODULE REQUIRED)
 catkin_package(
   INCLUDE_DIRS include
   #LIBRARIES wheel_encoder
-  CATKIN_DEPENDS rospy roscpp std_msgs nav_msgs geometry_msgs
+  CATKIN_DEPENDS rospy roscpp std_msgs nav_msgs geometry_msgs message_runtime
 #  DEPENDS system_lib
 )
 
