--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ Hardware/FreeCad/chasis/*.fcstd1
 Software/ROS/catkin_ws/build/
 Software/ROS/catkin_ws/devel/
 Software/ROS/catkin_ws/src/.vscode
+*.vscode*
