cosillas de los pkg

--- a/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
+++ b/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
@@ -149,6 +149,7 @@ include_directories(
  add_executable(wheele_odom   src/wheele_odom.cpp   )
  add_executable(control_motors   src/control_motors.cpp   )
  add_executable(experiment	src/experiment.cpp	)
+ add_executable(experiment_step	src/experiment_step.cpp	)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -162,6 +163,7 @@ include_directories(
  add_dependencies(wheele_odom   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
  add_dependencies(control_motors   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
  add_dependencies(experiment   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
+ add_dependencies(experiment_step   ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS}        )
 
 ## Specify libraries to link a library or executable target against
  target_link_libraries(wheel_encoder
@@ -177,6 +179,8 @@ include_directories(
 			encoder
 			)
  target_link_libraries(experiment ${catkin_LIBRARIES} )
+ target_link_libraries(experiment_step ${catkin_LIBRARIES} )
+
 
 #############
 ## Install ##
