--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ Software/ROS/catkin_ws/build/
 Software/ROS/catkin_ws/devel/
 Software/ROS/catkin_ws/src/.vscode
 *.vscode*
+Software/ROS/catkin_ws/ticks.txt
