--- a/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
+++ b/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
@@ -122,24 +122,24 @@ odom0_relative: false
 
 # Further input parameter examples
 #pose0: /orb_slam2_rgbd/pose #published by orb-SLAM2
-pose0: /rtabmap/rgbd_odometry #published by rtabmap-SLAM
-pose0_config: [true,  true,  false,
-               false, false, true,
-               false, false, false,
-               false, false, false,
-               false, false, false]
-pose0_differential: false
-pose0_relative: false
-pose0_queue_size: 10
-pose0_nodelay: false
+# pose0: /rtabmap/rgbd_odometry #published by rtabmap-SLAM
+# pose0_config: [true,  true,  false,
+#                false, false, true,
+#                false, false, false,
+#                false, false, false,
+#                false, false, false]
+# pose0_differential: false
+# pose0_relative: false
+# pose0_queue_size: 10
+# pose0_nodelay: false
 
 
-imu0: example/imu   #Published by kinect camera's accelerometer
+imu0: /imu   #Published by kinect camera's accelerometer
 imu0_config: [false, false, false,
               false, false, false,
               false, false, false,
               false, false, false,
-              true,  true,  false]
+              true,  true,  true]
 imu0_nodelay: false
 imu0_differential: false
 # for relative XY acceleration measurement to work, kinect MUST be full horizontal at Wheele's launch
