creo que ahora si hay signo en las velocidades jejeje

--- a/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
+++ b/Software/ROS/catkin_ws/src/wheele/CMakeLists.txt
@@ -137,7 +137,7 @@ include_directories(
 )
 
 ## Declare a C++ library
- add_library(encoder src/encoder.cpp)
+ add_library(encoder include/wheel_encoder/encoder.cpp)
 
 ## Add cmake target dependencies of the library
 ## as an example, code may need to be generated before libraries
