--- a/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
+++ b/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
@@ -80,11 +80,12 @@ world_frame: odom           # Defaults to the value of odom_frame if unspecified
 # has no pose information, so the first six values would be meaningless in that case. Each vector defaults to all false
 # if unspecified, effectively making this parameter required for each sensor.
 odom0: /odom #published by wheele_odom's node
-odom0_config: [false, false, false,
-               false, false, false,
-               true,  true,  false,
-               false, false, true,
-               false, false, false]
+              #true,true,true
+odom0_config: [false,false,false,   # x,y,z
+               false, false, false, # roll,pitch,yaw
+               true,  true, false,  # vx,vy,vz
+               false, false, true,  # v_roll,v_pitch,v_yaw
+               false, false, false] # ax,ay,az
 
 # If you have high-frequency data or are running with a low frequency parameter value, then you may want to increase
 # the size of the subscription queue so that more measurements are fused.
@@ -121,10 +122,10 @@ odom0_relative: false
 #odom0_twist_rejection_threshold: 1
 
 # Further input parameter examples
-#pose0: /orb_slam2_rgbd/pose #published by orb-SLAM2
-# pose0: /rtabmap/rgbd_odometry #published by rtabmap-SLAM
-# pose0_config: [true,  true,  false,
-#                false, false, true,
+# pose0: /orb_slam2_rgbd/pose #published by orb-SLAM2
+# #pose0: /rtabmap/rgbd_odometry #published by rtabmap-SLAM
+# pose0_config: [true,  true,  true,
+#                true, true, true,
 #                false, false, false,
 #                false, false, false,
 #                false, false, false]
@@ -134,12 +135,12 @@ odom0_relative: false
 # pose0_nodelay: false
 
 
-imu0: /imu   #Published by kinect camera's accelerometer
+imu0: /imu/data   
 imu0_config: [false, false, false,
               false, false, false,
               false, false, false,
-              false, false, false,
-              true,  true,  true]
+              false,  false,  true,
+              true,  false,  false]
 imu0_nodelay: false
 imu0_differential: false
 # for relative XY acceleration measurement to work, kinect MUST be full horizontal at Wheele's launch
