--- a/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
+++ b/Software/ROS/catkin_ws/src/wheele/config/ekf_template_wheele.yaml
@@ -135,12 +135,13 @@ odom0_relative: false
 # pose0_nodelay: false
 
 
-imu0: /imu/data   
+#imu0: /imu/data
+imu0: /imu1_scaImu   
 imu0_config: [false, false, false,
               false, false, false,
               false, false, false,
-              false,  false,  true,
-              true,  false,  false]
+              true,  true,  true,
+              true,  true,  true]
 imu0_nodelay: false
 imu0_differential: false
 # for relative XY acceleration measurement to work, kinect MUST be full horizontal at Wheele's launch
